# learn-pyside6

./: .gitignore  README.md  pyproject.toml
sandbox4/: _p.py  main.py  table_model.py  ui_wizard.py  wizard.ui
sandbox6/: main.py  table_model.py  tree_model.py  ui_wizard.py  wizard.ui  参考.txt
src/: dummy_process.py  main.py  my_table_model.py
src/wiz/: ui_wizard.py  wizard.ui
